--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "angular-oauth2-oidc": "^15.0.1",
     "bootstrap": "^5.3.1",
+    "font-awesome": "^4.7.0",
+    "highlight.js": "^11.8.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -31,12 +34,15 @@
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/quill": "^1.3.10",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ngx-quill": "^22.0.0",
+    "quill": "^1.3.7",
     "typescript": "~5.1.3"
   }
 }
