--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@videojs/themes": "file:1.0.1/dist/city/index.css",
     "angular-oauth2-oidc": "^15.0.1",
     "bootstrap": "^5.3.1",
     "font-awesome": "^4.7.0",
@@ -47,6 +48,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "ngx-quill": "^22.0.0",
     "quill": "^1.3.7",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "video.js": "^8.5.2"
   }
 }
