--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.3.1",
     "font-awesome": "^4.7.0",
     "highlight.js": "^11.8.0",
+    "ng2-file-upload": "^5.0.0",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
