--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Environments
+src/environments/environment.prod.ts
+src/environments/environment.ts
+
