--- a/angular.json
+++ b/angular.json
@@ -40,8 +40,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "1.1mb",
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
