--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -37,25 +37,25 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: node-app
+    - name: Download artifact from build job
+      uses: actions/download-artifact@v3
+      with:
+        name: node-app
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'poznajai-angular'
-          slot-name: 'production'
-          package: .
-          publish-profile: ${{ secrets.AzureAppService_PublishProfile_b48637f79175474895924eb8f06a8fc3 }}
+    - name: Exclude node_modules from artifact
+      run: |
+        zip -d node-app/release.zip 'node_modules/*'
+
+    - name: Unzip artifact for deployment
+      run: unzip node-app/release.zip
+
+    - name: 'Deploy to Azure Web App'
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'poznajai-angular'
+        slot-name: 'production'
+        package: .
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_b48637f79175474895924eb8f06a8fc3 }}
+
