--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -27,7 +27,7 @@ jobs:
           npm run build --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip ./ --exclude='node_modules/*'
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -43,10 +43,6 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: node-app
-
-    - name: Exclude node_modules from artifact
-      run: |
-        zip -d node-app/release.zip 'node_modules/*'
 
     - name: Unzip artifact for deployment
       run: unzip node-app/release.zip
