--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -25,9 +25,10 @@ jobs:
         run: |
           npm install
           npm run build --if-present
+          cd .\dist\poznajai\
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip ./ --exclude='node_modules/*'
+        run: zip -r release.zip ./ 
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
