--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          cd .\dist\poznajai\
+          cd ./dist/poznajai/
 
       - name: Zip artifact for deployment
         run: zip -r release.zip ./ 
