github workflow fix

--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -27,7 +27,7 @@ jobs:
           npm run build --if-present
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip ./dist/poznajai/*
+        run: zip -r -j release.zip ./dist/poznajai/*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
